修改实体复制工具